2010-09-13  Peter Rosin  <peda@lysator.liu.se>

	Prefer $NM @file when the toolchain isn't native to $build.
	* libltdl/config/ltmain.m4sh (func_mode_link): Avoid calculating
	the command line length and take the @file branch *if* the file
	names needs to be converted for the toolchain and the @file
	branch works.  Fixes problems in stresstest.at when doing a cross
	from Cygwin to MinGW using MinGW native tools (a.k.a. a "faked"
	cross), and for the specific case of MSVC on Cygwin it makes the
	test pass.

2010-09-14  Eric Blake  <eblake@redhat.com>

	maint: ship .xz, not .lzma
	* configure.ac (AM_INIT_AUTOMAKE): Prefer better file format.
	* Makefile.maint (git-release, git-dist, prev-tarball)
	(new-tarball, diffs): Use correct extension.
	* HACKING: Update instructions.
	* .gitignore: Ignore .xz files.

2010-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	doc: avoid long lines in input and output, indexing fixes.
	* doc/libtool.texi (Linking libraries)
	(Module loaders for libltdl): Manually line-wrap examples, to
	avoid long lines.
	(Libltdl interface, User defined module data)
	(Module loaders for libltdl): Wrap long @deftypefun input lines
	using trailing '@'.  Use @deftypefun rather than @deftp where
	appropriate, and add spaces in @deftypefun lines to fix the
	index entries generated from these lines.
	(Cheap tricks): Use @smallexample rather than @example, to avoid
	long lines.

	docs: @file and @option markup fixes.
	* doc/libtool.texi (Creating object files, Linking libraries)
	(Linking executables, Link mode, Finish mode, Autoconf macros)
	(Using Automake, Inter-library dependencies, Dlpreopening)
	(Linking with dlopened modules, Finding the dlname)
	(Libltdl interface, Test descriptions, Multiple dependencies):
	Add @option where needed, replace @samp with @file as
	appropriate.

2010-09-12  Peter Rosin  <peda@lysator.liu.se>

	* .gitignore: Ignore *.obj files for MSVC (and w32 in general).

	Adjust to moved auxiliary files and add compile.